--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -10,6 +10,7 @@
         flex-wrap: wrap;
         border-bottom: 1px solid #C4C4C4;
     }
+
     &__menu-button {
         @include button-reset;
 
@@ -36,6 +37,7 @@
             display: flex;
             justify-content: space-between;
         }
+
         &__menu-button {
             display: none;
         }
@@ -45,9 +47,11 @@
 @media (min-width: 1024px) {
     .header {
         border-bottom: 1px solid #C4C4C4;
+
         &__wrapper {
             max-width: 1600px;
             padding: 0 6.25%;
+            padding-right: 0;
             margin: 0 auto;
             border-bottom: none;
         }
