--- a/source/scss/blocks/call-popover.scss
+++ b/source/scss/blocks/call-popover.scss
@@ -4,15 +4,18 @@
     z-index: 11;
     background-color: #fff;
     padding-top: 5px;
+    padding-bottom: 5px;
 
     animation-name: show;
     animation-duration: 1s;
     animation-delay: 1s;
     animation-fill-mode: both;
 
+    border-bottom: 1px solid #c4c4c4;
+
     &__wrapper {
         margin: 0 auto;
-        width: 320px;
+        width: 295px;
         position: relative;
         text-align: center;
     }
@@ -35,6 +38,8 @@
         &::before {
             position: absolute;
             content: "";
+            left: 0;
+            top: 5px;
             width: 100%;
             height: 1px;
             background-color: #000;
@@ -46,6 +51,8 @@
             position: absolute;
             content: "";
             width: 100%;
+            left: 0;
+            top: 5px;
             height: 1px;
             background-color: #000;
             transform: rotate(-45deg);
