--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: #313131;
     padding-top: 50px;
+    padding-bottom: 30px;
 
     &__logo {
         padding: 0 15px;
@@ -40,6 +41,7 @@
     .footer {
         padding-left: 100px;
         padding-right: 100px;
+
         &__logo-text {
             font-weight: 600;
             font-size: 139px;
@@ -48,7 +50,7 @@
         }
 
         & .owner-info {
-            max-width: 350px;
+            max-width: 750px;
             margin: 0;
             margin-left: auto;
         }
